package model;

/**
 *
 * @author PONAMAREV Andrei - ROBERFROID Julien
 */
public enum Status {
    UNDEFINED, ORPHAN, SAME, NEWER, OLDER, PARTIAL_SAME
}
